Added instructions for loading in colab

--- a/design-mode-translations.ipynb
+++ b/design-mode-translations.ipynb
@@ -8,7 +8,13 @@
     "\n",
     "This notebook takes you through the steps to past in the `start_html` from an App Lab level, then generate some boilerplate code needed to make the app translatable with a student library.\n",
     "\n",
-    "[More info on making Applab sample apps translatable here]()"
+    "[More info on making Applab sample apps translatable here]()\n",
+    "\n",
+    "**Step 0:** If you are viewing this within Github, you need to adjust the URL so you can instead view this as a runnable notebook in Google Colab. Here's how to do that:\n",
+    "- The website you're on right now should look _something_ like `https://github.com/dancodedotorg/translation-scripts/blob/master/design-mode-translations.ipynb`\n",
+    "- Change the `github.com` part of the website to `githubtocolab.com`. Leave everything else the same!\n",
+    "  - Example: `https://githubtocolab.com/dancodedotorg/translation-scripts/blob/master/design-mode-translations.ipynb`\n",
+    "- Press enter. The page will reload and you'll now be on the Google Colab site, where you can actually run this notebook"
    ]
   },
   {
@@ -225,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +241,6 @@
       "setText(\"label1\", label1Text);\n",
       "setText(\"showChoice\", showChoiceText);\n",
       "setText(\"text_area1\", text_area1Text);\n",
-      "setProperty(\"dropdownTest\", \"options\", ['option1', 'option2']);\n",
       "setProperty(\"dropdown1\", \"options\", ['Red', 'Blue']);\n"
      ]
     }
