no longer catches empty string elts

--- a/design-mode-translations.ipynb
+++ b/design-mode-translations.ipynb
@@ -41,7 +41,8 @@
     "\n",
     "    # Extract content between <label></label> tags\n",
     "    for label in soup.find_all('label'):\n",
-    "        results.append((\"label\", label.get('id', 'no-id'), label.get_text()))\n",
+    "        if(label.get_text() != \"\"):\n",
+    "            results.append((\"label\", label.get('id', 'no-id'), label.get_text()))\n",
     "\n",
     "    # Extract content between <option></option> tags\n",
     "    for option in soup.find_all('option'):\n",
@@ -50,16 +51,19 @@
     "\n",
     "    # Extract content between <button></button> tags\n",
     "    for button in soup.find_all('button'):\n",
-    "        results.append((\"button\", button.get('id', 'no-id'), button.get_text()))\n",
+    "        if(button.get_text() != \"\"):\n",
+    "            results.append((\"button\", button.get('id', 'no-id'), button.get_text()))\n",
     "\n",
     "    # Extract content within the 'placeholder' property of <input> elements\n",
     "    for inp in soup.find_all('input'):\n",
     "        if 'input' in inp.attrs:\n",
-    "            results.append((\"input placeholder\", inp.get('id', 'no-id'), inp['placeholder']))\n",
+    "            if(inp['placeholder'] != \"\"):\n",
+    "                results.append((\"input placeholder\", inp.get('id', 'no-id'), inp['placeholder']))\n",
     "\n",
     "    # Extract strings within <div></div> tags that have a contenteditable=true property\n",
     "    for div in soup.find_all('div', contenteditable='true'):\n",
-    "        results.append((\"textarea\", div.get('id', 'no-id'), div.get_text()))\n",
+    "        if(div.get_text() != \"\"):\n",
+    "            results.append((\"textarea\", div.get('id', 'no-id'), div.get_text()))\n",
     "\n",
     "    return results\n"
    ]
