empty string bug

--- a/design-mode-translations.ipynb
+++ b/design-mode-translations.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,13 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sample input\n",
     "html_input = \"\"\"\n",
-    "<div id=\"designModeViz\" class=\"appModern clip-content\" tabindex=\"1\" data-radium=\"true\" style=\"width: 320px; height: 450px; transform: scale(0.81875);\"><div class=\"screen\" tabindex=\"1\" data-theme=\"default\" id=\"screen1\" style=\"display: block; height: 450px; width: 320px; left: 0px; top: 0px; position: absolute; z-index: 0; background-color: rgb(255, 255, 255);\"><label style=\"margin: 0px; line-height: 1; overflow: hidden; overflow-wrap: break-word; max-width: 320px; border-style: solid; text-rendering: optimizespeed; color: rgb(77, 87, 95); background-color: rgba(0, 0, 0, 0); border-color: rgb(77, 87, 95); border-radius: 0px; border-width: 0px; font-family: &quot;Arial Black&quot;, Gadget, sans-serif; font-size: 13px; padding: 2px 15px; width: 240px; height: 60px; position: absolute; left: 35px; top: 125px;\" id=\"label1\">Pick a color!</label><select id=\"dropdown1\" style=\"width: 200px; height: 30px; margin: 0px; border-style: solid; background-color: rgb(255, 255, 255); color: rgb(77, 87, 95); background-image: url(&quot;data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20256%20448%22%20enable-background%3D%22new%200%200%20256%20448%22%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E.arrow%7Bfill%3A%234d575f%3B%7D%3C%2Fstyle%3E%3Cpath%20class%3D%22arrow%22%20d%3D%22M255.9%20168c0-4.2-1.6-7.9-4.8-11.2-3.2-3.2-6.9-4.8-11.2-4.8H16c-4.2%200-7.9%201.6-11.2%204.8S0%20163.8%200%20168c0%204.4%201.6%208.2%204.8%2011.4l112%20112c3.1%203.1%206.8%204.6%2011.2%204.6%204.4%200%208.2-1.5%2011.4-4.6l112-112c3-3.2%204.5-7%204.5-11.4z%22%2F%3E%3C%2Fsvg%3E&quot;); border-color: rgb(0, 0, 0); border-radius: 4px; border-width: 1px; font-family: Arial, Helvetica, sans-serif; font-size: 13px; padding: 0px 30px 0px 15px; position: absolute; left: 60px; top: 200px;\"><option>Red</option><option>Blue</option></select><button id=\"showChoice\" style=\"padding: 0px; margin: 0px; border-style: solid; height: 40px; width: 150px; background-color: rgb(255, 164, 0); color: rgb(255, 255, 255); border-color: rgb(77, 87, 95); border-radius: 4px; border-width: 1px; font-family: &quot;Arial Black&quot;, Gadget, sans-serif; font-size: 15px; position: absolute; left: 75px; top: 310px;\">See my choice</button><input id=\"text_input1\" style=\"margin: 0px; width: 200px; height: 30px; border-style: solid; color: rgb(77, 87, 95); background-color: rgb(242, 242, 242); border-color: rgb(77, 87, 95); border-radius: 4px; border-width: 1px; font-family: Arial, Helvetica, sans-serif; font-size: 13px; padding: 5px 15px; position: absolute; left: 60px; top: 25px;\" placeholder=\"placeholderTest\"><div contenteditable=\"true\" class=\"textArea\" id=\"text_area1\" style=\"width: 200px; height: 100px; border-style: solid; background-color: rgb(242, 242, 242); color: rgb(77, 87, 95); border-color: rgb(255, 255, 255); border-radius: 2px; border-width: 1px; font-family: Arial, Helvetica, sans-serif; font-size: 13px; padding: 5px 15px; position: absolute; left: 60px; top: 350px; margin: 0px;\">divTest</div></div></div>\n",
+    "<div id=\"designModeViz\" class=\"appModern\" tabindex=\"1\" data-radium=\"true\" style=\"display: none; width: 320px; height: 450px;\"><div class=\"screen\" tabindex=\"1\" data-theme=\"default\" id=\"screen\" style=\"display: block; height: 450px; width: 320px; left: 0px; top: 0px; position: absolute; z-index: 0; background-color: rgb(255, 255, 255);\"><img src=\"/level_starter_assets/U9L5 Cropping Widget/yellow-poppy-4295713_1920.jpg\" data-canonical-image-url=\"image://yellow-poppy-4295713_1920.jpg\" data-image-type=\"file\" data-object-fit=\"contain\" id=\"image\" style=\"height: 385px; width: 270px; border-style: solid; border-width: 0px; border-color: rgb(0, 0, 0); border-radius: 0px; position: absolute; left: 25px; margin: 0px; top: 0px;\"><button id=\"cropRectTopLeft\" style=\"padding: 0px; margin: 0px; border-style: solid; height: 40px; width: 100px; background-color: rgb(255, 255, 255); color: rgb(255, 255, 255); border-color: rgb(77, 87, 95); border-radius: 0px; border-width: 0px; font-family: &quot;Arial Black&quot;, Gadget, sans-serif; font-size: 15px; position: absolute; left: 0px; top: 0px;\" class=\"design-mode-hidden\"></button><button id=\"cropRectTopRight\" style=\"padding: 0px; margin: 0px; border-style: solid; height: 40px; width: 100px; background-color: rgb(255, 255, 255); color: rgb(255, 255, 255); border-color: rgb(77, 87, 95); border-radius: 0px; border-width: 0px; font-family: &quot;Arial Black&quot;, Gadget, sans-serif; font-size: 15px; position: absolute; left: 215px; top: 5px;\" class=\"design-mode-hidden\"></button><button id=\"cropRectBottomRight\" style=\"padding: 0px; margin: 0px; border-style: solid; height: 40px; width: 100px; background-color: rgb(255, 255, 255); color: rgb(255, 255, 255); border-color: rgb(77, 87, 95); border-radius: 0px; border-width: 0px; font-family: &quot;Arial Black&quot;, Gadget, sans-serif; font-size: 15px; position: absolute; left: 215px; top: 355px;\" class=\"design-mode-hidden\"></button><button id=\"cropRectBottomLeft\" style=\"padding: 0px; margin: 0px; border-style: solid; height: 40px; width: 100px; background-color: rgb(255, 255, 255); color: rgb(255, 255, 255); border-color: rgb(77, 87, 95); border-radius: 0px; border-width: 0px; font-family: &quot;Arial Black&quot;, Gadget, sans-serif; font-size: 15px; position: absolute; left: 0px; top: 350px;\" class=\"design-mode-hidden\"></button><label class=\"img-upload fa fa-camera\" id=\"photo_select1\" style=\"margin: 0px; border-style: solid; overflow: hidden; background-color: rgb(134, 122, 233); color: rgb(255, 255, 255); border-color: rgb(77, 87, 95); border-radius: 4px; border-width: 1px; padding: 0px; text-align: center; font-size: 32px; width: 55px; height: 40px; display: flex; align-items: center; justify-content: center; position: absolute; left: 10px; top: 405px;\"><input type=\"file\" accept=\"image/*\" hidden=\"\"></label><button id=\"button2\" style=\"padding: 0px; margin: 0px; border-style: solid; height: 40px; width: 80px; background-color: rgb(255, 245, 171); color: rgb(134, 122, 233); border-color: rgb(77, 87, 95); border-radius: 4px; border-width: 1px; font-family: &quot;Arial Black&quot;, Gadget, sans-serif; font-size: 15px; position: absolute; left: 75px; top: 405px;\">Crop</button><label style=\"margin: 0px; line-height: 1; overflow: hidden; overflow-wrap: break-word; max-width: 320px; border-style: solid; text-rendering: optimizespeed; color: rgb(77, 87, 95); background-color: rgba(0, 0, 0, 0); border-color: rgb(77, 87, 95); border-radius: 0px; border-width: 0px; font-family: &quot;Arial Black&quot;, Gadget, sans-serif; font-size: 11px; padding: 2px 15px; width: 120px; height: 20px; position: absolute; left: 220px; top: 405px; text-align: left;\" id=\"label1\">Image Select</label><button id=\"resetBtn\" style=\"padding: 0px; margin: 0px; border-style: solid; height: 40px; width: 65px; background-color: rgb(255, 206, 173); color: rgb(134, 122, 233); border-color: rgb(77, 87, 95); border-radius: 4px; border-width: 1px; font-family: &quot;Arial Black&quot;, Gadget, sans-serif; font-size: 15px; position: absolute; left: 165px; top: 405px;\">Reset</button><img data-canonical-image-url=\"icon://fa-arrow-circle-o-left\" data-image-type=\"icon\" data-object-fit=\"contain\" id=\"leftArrow\" style=\"height: 35px; width: 45px; border-style: solid; border-width: 0px; border-color: rgb(0, 0, 0); border-radius: 0px; position: absolute; left: 230px; top: 415px; margin: 0px;\"><img data-canonical-image-url=\"icon://fa-arrow-circle-o-right\" data-image-type=\"icon\" data-object-fit=\"contain\" id=\"rightArrow\" style=\"height: 35px; border-style: solid; border-width: 0px; border-color: rgb(0, 0, 0); border-radius: 0px; position: absolute; left: 280px; top: 415px; margin: 0px; width: 45px;\"><label style=\"margin: 0px; line-height: 1; overflow: hidden; overflow-wrap: break-word; max-width: 320px; border-style: solid; text-rendering: optimizespeed; color: rgb(77, 87, 95); background-color: rgba(0, 0, 0, 0); border-color: rgb(77, 87, 95); border-radius: 0px; border-width: 2px; font-family: &quot;Arial Black&quot;, Gadget, sans-serif; font-size: 13px; padding: 2px 15px; width: 100px; height: 100px; position: absolute; left: 155px; top: 210px;\" id=\"cropSelector\"></label></div></div>\n",
     "\"\"\"  # The provided sample input"
    ]
   },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -129,11 +129,9 @@
      "output_type": "stream",
      "text": [
       "var TRANSLATIONTEXT = {\n",
-      "  \"label1_0\": \"Pick a color!\",\n",
-      "  \"dropdown1_1\": \"Red\",\n",
-      "  \"dropdown1_2\": \"Blue\",\n",
-      "  \"showChoice_3\": \"See my choice\",\n",
-      "  \"text_area1_4\": \"divTest\"\n",
+      "  \"label1_0\": \"Image Select\",\n",
+      "  \"button2_1\": \"Crop\",\n",
+      "  \"resetBtn_2\": \"Reset\"\n",
       "};\n",
       "\n"
      ]
