fixed bug with textArea

--- a/design-mode-translations.ipynb
+++ b/design-mode-translations.ipynb
@@ -60,8 +60,8 @@
     "            if(inp['placeholder'] != \"\"):\n",
     "                results.append((\"input placeholder\", inp.get('id', 'no-id'), inp['placeholder']))\n",
     "\n",
-    "    # Extract strings within <div></div> tags that have a contenteditable=true property\n",
-    "    for div in soup.find_all('div', contenteditable='true'):\n",
+    "    # Extract strings within <div></div> tags that have a class of \"textArea\"\n",
+    "    for div in soup.find_all('div', class_=\"textArea\"):\n",
     "        if(div.get_text() != \"\"):\n",
     "            results.append((\"textarea\", div.get('id', 'no-id'), div.get_text()))\n",
     "\n",
